<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d3449"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/high_temperature"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textViewType"
        app:layout_constraintTop_toBottomOf="@+id/textViewType" />

    <TextView
        android:id="@+id/textViewLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/low_temperature"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textViewHigh"
        app:layout_constraintStart_toStartOf="@+id/textViewHigh"
        app:layout_constraintTop_toBottomOf="@+id/textViewHigh" />

    <ImageView
        android:id="@+id/imageViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewType"
        app:layout_constraintStart_toStartOf="@+id/imageViewType"
        app:layout_constraintTop_toBottomOf="@+id/imageViewType" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPrevious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonToday"
        app:layout_constraintTop_toTopOf="@+id/buttonPrevious" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/button_previous"
        app:layout_constraintEnd_toStartOf="@+id/buttonToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLow" />

    <Button
        android:id="@+id/buttonToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrevious" />

    <TextView
        android:id="@+id/textViewHighValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHigh"
        app:layout_constraintStart_toEndOf="@+id/textViewHigh"
        app:layout_constraintTop_toTopOf="@+id/textViewHigh" />

    <TextView
        android:id="@+id/textViewLowValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLow"
        app:layout_constraintStart_toEndOf="@+id/textViewLow"
        app:layout_constraintTop_toTopOf="@+id/textViewLow" />
</androidx.constraintlayout.widget.ConstraintLayout>